--- a/reset/resset.css
+++ b/reset/resset.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     border: 0;
-    font-family: 'Cormorant Garamond';
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 *,
@@ -11,17 +11,6 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-}
-
-html,
-body {
-    height: 100%;
-    width: 100%;
-    font-size: 100%;
-    line-height: 1;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
 }
 
  :focus,
@@ -39,6 +28,18 @@ footer,
 header,
 aside {
     display: block;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 input,
@@ -60,9 +61,8 @@ button::-moz-focus-inner {
     border: 0;
 }
 
-a {
-    white-space: nowrap;
-    color: black;
+a,
+a:visited {
     text-decoration: none;
 }
 
@@ -77,15 +77,4 @@ ul li {
 img {
     vertical-align: top;
 }
-
-h1 {
-    font-weight: 900;
-    white-space: nowrap;
-}
-
-h2 {
-    font-weight: 700;
-}
-
-
 /*-------resset-------------*/
